FindBugs: For performance reasons, use Integer.valueOf() instead of new Integer().